# wuwa-helper

./: .gitignore  README.md  package-lock.json  package.json  prebuild_assets.py
.deploy/Wuthering Waves Assistant/: Uninstall Wuthering Waves Assistant.lnk
.github/workflows/: release.yml
src/: App.css  App.tsx  props.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/assets/: cache.rs  downloader.rs  hardcoded_mappings.rs  mapper.rs  mod.rs  models.rs  resolver.rs
src-tauri/src/assets/mappings/: characters.rs  echo_sets.rs  echoes.rs  elements.rs  exploration.rs  materials.rs  mod.rs  weapons.rs
src-tauri/src/commands/: account.rs  asset_resolver.rs  assets.rs  characters.rs  database.rs  echo_stats.rs  echoes.rs  endgame.rs  exploration.rs  gacha.rs  goals.rs  mod.rs  weapons.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/db/versions/: v1.rs  v2.rs
src/components/: AddCharacterModal.tsx  AddWeaponModal.tsx  AssetManager.tsx  CharacterEchoBuildSection.tsx  CharacterInfo.tsx  CharacterModal.tsx  CharacterPortrait.tsx  CharacterTalentsSection.tsx  CharacterWeaponSection.tsx  ConfirmDialog.tsx  CurrencyIcon.tsx  EchoItem.tsx  ElementIcon.tsx  FiveStarHistory.tsx  PortalDropdown.tsx  PullHistoryItem.tsx  SectionHeader.tsx  TowerDetailsView.tsx  TowerSection.tsx  TroopMatrixDetailsView.tsx  TroopMatrixSection.tsx  WeaponTypeIcon.tsx  WhimperingWastesDetailsView.tsx  WhimperingWastesSection.tsx
src/hooks/: useAssets.ts  (+1 more)
(+20 files in other folders)
