[package]
name = "wuwa-helper"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wuwa_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2"
